# pyfastexcel

./: .codacy.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  benchmark.py  codecov.yml  example.py  go.mod  go.sum  mkdocs.yml  pyfastexcel.go  pyfastexcel_test.go  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  go.yml  pre-commit.yml  pypi.yml  python.yml
benchmark/: baseline_probe.py  benchmark.md  benchmark.py  perf_compare.py  perf_memory.py  plot_perf.py  readme.md
benchmark/results/: 2026-07-16-stage-a-baseline.json  2026-07-16-stage-a-json.json  2026-07-16-stage-a-pfx2.json  2026-07-17-fastpath-zip6.json  2026-07-17-fastpath.json  2026-07-21-baseline-v1.json  2026-07-21-fastpath-zip6.json  2026-07-21-fastpath.json  2026-07-21-wire-only.json
benchmark/results/reproduction-2026-07-20/: README.md  baseline-v1.json  new-v2-json.json  new-v2-pfx2-file.json  new-v2-pfx2.json
docs/: api.md  benchmark.md  chart.md  common.md  excelize_feature_gap_report.md  index.md  license.md  pivot.md  quickstart.md  requirements.txt  style.md  workbook.md  worksheet.md  writer.md
examples/: full_examples.py
pyfastexcel/: THIRD_PARTY_NOTICES.md  __init__.py  _typing.py  chart.py  driver.py  enums.py  exceptions.py  logformatter.py  manager.py  pivot.py  pyfastexcel.h  serializers.py  style.py  utils.py  validators.py  wire.py  workbook.py  worksheet.py  writer.py
pyfastexcel/core/: cell.go  cell_test.go  chart.go  chart_test.go  compression.go  fastzip_disabled.go  fastzip_enabled.go  pivot.go  pivot_test.go  style.go  style_test.go  utils.go  utils_test.go  wire.go  wire_contract_test.go  wire_parallel_test.go  wire_test.go  worksheet.go  worksheet_test.go  writer.go  writer_test.go
specs/: 2026-07-13-perf-and-memory-safety-design.md
tests/: bugfixes_test.py  chart_test.py  conftest.py  perf_fastpath_test.py  perf_memory_safety_test.py  pivot_test.py  pyfastexcel_test.py  style_test.py  utils_test.py  validators_test.py  workbook_test.py  writer_test.py
