[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastexcel"
version = "0.1.9"
description = "High performace excel file generation library."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zncl2222", email = "3002shinning@gmail.com"}
]
maintainers = [
    {name = "Zncl2222", email = "3002shinning@gmail.com"}
]
keywords = ["excel", "xlsx", "spreadsheet", "high-performance", "golang"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Go",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "msgspec",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/Zncl2222/pyfastexcel"
Repository = "https://github.com/Zncl2222/pyfastexcel"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pip-tools",
    "matplotlib;python_version < '3.13'",
    "matplotlib>=3.9;python_version >= '3.13'",
    "eval-type-backport",
    "build",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "markdown-include",
]

[tool.setuptools]
packages = ["pyfastexcel"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
pyfastexcel = ["*.so", "*.dll", "*.dylib", "THIRD_PARTY_NOTICES.md"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-s -v --cov=pyfastexcel --cov-branch --cov-report=term-missing --cov-report=xml:py_coverage.xml"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "pass",
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in default arguments
]
[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "SLF001"]
"*_test.py" = ["S101", "SLF001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
trailing-commas = "always"
line-ending = "lf"

[dependency-groups]
dev = [
    "pre-commit",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pip-tools",
    "matplotlib;python_version < '3.13'",
    "matplotlib>=3.9;python_version >= '3.13'",
    "eval-type-backport",
    "build",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "markdown-include",
]
