[metadata]
name = pyfastexcel
version = 0.0.1
description = High performace excel file generation library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zncl2222/pyfastexcel
author = Zncl2222
author_email = 3002shinning@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Go
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    pyfastexcel
install_requires =
    msgspec
    openpyxl-style-writer
python_requires = >=3.7
include_package_data = true
zip_safe = false

[options.package_data]
* = *.dll, *.so
