[metadata]
name = pyfastexcel
version = 0.1.8
description = High performace excel file generation library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zncl2222/pyfastexcel
author = Zncl2222
author_email = 3002shinning@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Go
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    pyfastexcel
install_requires =
    msgspec
    pydantic
    eval-type-backport;python_version < '3.9'
python_requires = >=3.8
include_package_data = true
zip_safe = false

[coverage:report]
exclude_also =
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
    pass
    @overload
